# emoji-printer

./: Cargo.toml  README.md
src/: emojis.rs  lib.rs  main.rs
