[package]
name = "emoji-printer"
description = "Converts strings with emoji shortcodes to string with the respective emoji unicode"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Scully <scullykns@gmail.com>", ]
readme = "README.md"
repository = "https://github.com/zieka/emoji-printer"
license = "MIT OR Apache-2.0"
keywords = ["emoji", "emojis", "print", "printer", "graphic", "graphics"]

[dependencies]
