[package]
name = "emoji-printer"
description = "Converts emoji shortcodes to unicode (\":sushi:\" -> 🍣)"
version = "0.4.2"
edition = "2021"
authors = ["Kyle Scully <scullykns@gmail.com>", ]
readme = "README.md"
repository = "https://github.com/zieka/emoji-printer"
license = "MIT OR Apache-2.0"
keywords = ["emoji", "shortcode", "print", "printer", "unicode"]

[dependencies]
regex = "1.5.4"
